; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_policy.c_xfrm_policy_delete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_policy.c_xfrm_policy_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_policy = type { i32 }

@xfrm_policy_lock = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xfrm_policy_delete(%struct.xfrm_policy* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.xfrm_policy*, align 8
  %5 = alloca i32, align 4
  store %struct.xfrm_policy* %0, %struct.xfrm_policy** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = call i32 @write_lock_bh(i32* @xfrm_policy_lock)
  %7 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.xfrm_policy* @__xfrm_policy_unlink(%struct.xfrm_policy* %7, i32 %8)
  store %struct.xfrm_policy* %9, %struct.xfrm_policy** %4, align 8
  %10 = call i32 @write_unlock_bh(i32* @xfrm_policy_lock)
  %11 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %12 = icmp ne %struct.xfrm_policy* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %15 = call i32 @xfrm_policy_kill(%struct.xfrm_policy* %14)
  store i32 0, i32* %3, align 4
  br label %19

16:                                               ; preds = %2
  %17 = load i32, i32* @ENOENT, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %16, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local %struct.xfrm_policy* @__xfrm_policy_unlink(%struct.xfrm_policy*, i32) #1

declare dso_local i32 @write_unlock_bh(i32*) #1

declare dso_local i32 @xfrm_policy_kill(%struct.xfrm_policy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
